# hello

./: .appveyor.yml  .doozer.json  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  hello.desktop  hello.pro  main.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h
.github/workflows/: cmake.yml  mac-deploy.yml  qmake.yml
